Fixed categories card width on Mobile

--- a/src/components/mainPage/css/AboutCategories.css
+++ b/src/components/mainPage/css/AboutCategories.css
@@ -163,3 +163,10 @@
         text-align: center;
     }
 }
+
+@media (min-device-width : 320px) and (max-device-width : 336px) {
+    .about-categories .primitive-card {
+        width: 270px;
+        height: 300px;
+    }
+}
